# cascade

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  deny.toml  justfile
.config/: nextest.toml
.github/workflows/: ci.yml  heavy.yml
crates/backtester/: Cargo.toml
crates/backtester/src/: account.rs  fees.rs  lib.rs  report.rs  runner.rs  strategy.rs
crates/backtester/src/metrics/: mod.rs  normal.rs
crates/cli/: Cargo.toml
crates/cli/src/: export.rs  fit.rs  main.rs  run.rs  scenario.rs  table.rs
crates/market-sim/: Cargo.toml
crates/market-sim/src/: actor.rs  data.rs  des.rs  latency.rs  lib.rs  log.rs  projection.rs  sim.rs
crates/market-sim/src/hawkes/: fit.rs  mod.rs  params_io.rs  simulate.rs
crates/market-sim/src/source/: coint_pair.rs  hawkes.rs  mod.rs  poisson.rs  replay.rs
crates/market-sim/tests/: determinism.rs  replay.rs
crates/matching-engine/: Cargo.toml  README.md
crates/matching-engine/benches/: latency.rs  throughput.rs  workload.rs
crates/matching-engine/src/: engine.rs  lib.rs  testkit.rs  verify.rs
crates/matching-engine/src/book/: array.rs  btree.rs  ladder.rs  mod.rs
crates/matching-engine/tests/: differential.rs  properties.rs  scenarios.rs
crates/sim-core/: Cargo.toml
crates/sim-core/src/: error.rs  events.rs  ids.rs  instrument.rs  lib.rs  ops.rs  order.rs  price.rs  rng.rs  testkit.rs  time.rs
crates/strategies/: Cargo.toml
crates/strategies/src/: avellaneda_stoikov.rs  estimators.rs  lib.rs  naive_mm.rs  ou_pairs.rs
crates/strategies/src/execution/: almgren_chriss.rs  mod.rs  twap.rs
crates/strategies/tests/: ou_pairs_smoke.rs  pipeline.rs
data/: instruments.toml  manifest.toml
data/fixtures/: README.md
data/fixtures/binance-um/quotes/: BTCUSDT-2024-01-07-h00m00-10.parquet
data/fixtures/binance-um/trades/: BTCUSDT-2024-01-07-h00.csv  BTCUSDT-2024-01-07-h00.parquet
docs/: ARCHITECTURE.md  determinism.md  interchange.md  papers.md  spec.md
research/: pyproject.toml
research/notebooks/: 01-stylized-facts.ipynb  02-hawkes-fit.ipynb  03-simulator-validation.ipynb  04-hurst.ipynb  build_notebooks.py
research/src/quantsim_research/: __init__.py  config.py
research/src/quantsim_research/data/: __init__.py  binance_vision.py  cli.py  coinbase.py  download.py  fixtures.py  manifest.py  normalize.py  recorder.py
research/src/quantsim_research/hawkes/: __init__.py  diagnostics.py  exp_mle.py
research/src/quantsim_research/hurst/: __init__.py  estimators.py  vol_proxy.py
research/src/quantsim_research/metrics/: __init__.py  crosscheck.py  sharpe.py
research/src/quantsim_research/stylized_facts/: __init__.py  autocorr.py  orderflow.py  returns.py  tails.py
research/tests/: test_crosscheck.py  test_hawkes.py  test_hawkes_agreement.py  test_hurst.py  test_manifest.py  test_metrics.py  test_normalize.py  test_stylized_facts.py  test_urls.py
scenarios/: ac_vs_twap.toml  as_vs_naive.toml  hawkes_demo.toml  naive_mm_spread_study.toml  ou_pairs_demo.toml  poisson_mm_demo.toml  replay_fixture_demo.toml
