[project]
name = "quantsim-research"
version = "0.1.0"
description = "Research layer for quant-sim: data pipeline, stylized-facts validation, Hawkes diagnostics, metrics cross-checks"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.10",
    "numpy>=2.0",
    "scipy>=1.14",
    "httpx>=0.27",
    "tomli-w>=1.0",
    "tqdm>=4.66",
    "websockets>=13.0",
]

[project.scripts]
quantsim-data = "quantsim_research.data.cli:main"

[dependency-groups]
dev = ["pytest>=8.3", "ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantsim_research"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
markers = [
    "network: touches the real internet (excluded by default)",
    "slow: long-running statistical tests (excluded by default)",
]
addopts = "-m 'not network and not slow' -q"
testpaths = ["tests"]
