[package]
name = "backtester"
description = "Event-driven strategy execution against the matching engine with honest statistics (PSR/DSR over real trials)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
sim-core = { workspace = true }
matching-engine = { workspace = true }
market-sim = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libm = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
