[package]
name = "quant-sim"
description = "quant-sim CLI: scenario runner, model fitting, event exports, reports"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "quant-sim"
path = "src/main.rs"

[dependencies]
sim-core = { workspace = true }
matching-engine = { workspace = true }
market-sim = { workspace = true }
backtester = { workspace = true }
strategies = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
comfy-table = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
blake3 = { workspace = true }
humantime-serde = { workspace = true }
libm = { workspace = true }
csv = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
